--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "PODER",
-  "license": "ISC",
+  "author": "Fernando Matzdorf",
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "JSONStream": "^1.3.5",
     "command-line-args": "^5.1.1",
